Refaktorering - endrer alle lokale variabelnavn til var for å følge standarden ellers.